update biodata di hello.html

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello word..!!</h1>
+    <h2>Nama Saya yangyang somantri</h2>
+    <h2>Jenis Kelamin : Laki-laki</h2>
+    <h2>No Hp : 08986000347</h2>
+    <h2>Saya ingin belajar tentang web programming</h2>
     
 </body>
 </html>
